Recuperar datos user y eliminar cuenta

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">Local Market</string>
-    <string name="insert_email">Correo electronico...</string>
-    <string name="insert_pwd">Password...</string>
+
+
+    <string name="switch_vendedor">¿Registrarse como vendedor?</string>
+
+    <!-- buttons -->
     <string name="login">Login</string>
     <string name="sing_up">Sing up</string>
-    <string name="vendedor">¿Registrarse como vendedor?</string>
-
     <string name="password">Contraseña</string>
     <string name="email">Correo electrónico</string>
     <string name="username">Nombre de usuario</string>
@@ -14,9 +15,16 @@
     <string name="nombre">Nombre</string>
     <string name="listo">Listo</string>
 
+    <!-- hints -->
+    <string name="insert_email_hint">Correo electronico...</string>
+    <string name="insert_pwd_hint">Password...</string>
     <string name="indroduce_password_actual">Contraseña actual</string>
     <string name="introduce_new_password">Nueva contraseña</string>
 
-
+    <!-- messages -->
+    <string name="message_empty_fields">Por favor, complete todos los campos.</string>
+    <string name="vendedor">Vendedor\n</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
