--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -27,5 +27,8 @@
     <string name="message_empty_fields">Por favor, complete todos los campos.</string>
     <string name="vendedor">Vendedor\n</string>
 
+    <!-- productos -->
+    <string name="product_near">Productos cerca de mi</string>
+
 
 </resources>
