--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="username">Nombre de usuario</string>
     <string name="save">Guardar</string>
     <string name="delete">Eliminar cuenta</string>
-    <string name="nombre">Nombre</string>
+    <string name="nombreUsuario">Nombre Usuario</string>
     <string name="listo">Listo</string>
 
     <!-- hints -->
@@ -29,6 +29,8 @@
 
     <!-- productos -->
     <string name="product_near">Productos cerca de mi</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
