Aplicado Context a ValidationUtils y filtración activa de los campos del registro.

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -29,8 +29,16 @@
 
     <!-- productos -->
     <string name="product_near">Productos cerca de mi</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Toasts -->
+    <string name="toast_invalid_username">Este campo no puede tener carácteres especiales</string>
+    <string name="toast_invalid_email">El formato es incorrecto, debe ser "xxx@xxx.xxx"</string>
+    <string name="toast_invalid_special_characters">Este campo no puede tener carácteres especiales ni números</string>
+    <string name="toast_invalid_password">Productos cerca de mi</string>
+    <string name="toast_invalid_name">Productos cerca de mi</string>
+    <string name="toast_field_empty">Introduzca el campo</string>
+    <string name="toast_field_not_uppercase">El password debe contener minimo 1 mayuscula</string>
+    <string name="toast_field_not_special_char">El password debe contener minimo 1 caracter especial</string>
+    <string name="toast_field_min_8char">La contraseña debe tener mínimo 8 carácteres.</string>
 
 </resources>
