+ Completado el login de usuario i navegacion post login a los Activities correspondientes
+ Añadido boton de return en el registro i funcionalidad.

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="delete">Eliminar cuenta</string>
     <string name="nombreUsuario">Nombre Usuario</string>
     <string name="listo">Listo</string>
+    <string name="cancel">Cancelar</string>
 
     <!-- hints -->
     <string name="insert_email_hint">Correo electrónico</string>
