--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="introduce_new_password">Nueva contraseña</string>
     <string name="hint_name">Nombre</string>
     <string name="hint_surname">Apellidos</string>
+    <string name="hint_description">Describe tu producto</string>
 
     <!-- messages -->
     <string name="message_empty_fields">Por favor, complete todos los campos.</string>
@@ -30,6 +31,11 @@
 
     <!-- productos -->
     <string name="product_near">Productos cerca de mi</string>
+    <string name="product_main">Mis productos a la venta</string>
+    <string name="new_product">Nuevo producto</string>
+    <string name="price">Precio</string>
+
+
 
     <!-- Toasts -->
     <string name="toast_invalid_username">Este campo no puede tener carácteres especiales</string>
@@ -41,5 +47,7 @@
     <string name="toast_field_not_uppercase">El password debe contener minimo 1 mayuscula</string>
     <string name="toast_field_not_special_char">El password debe contener minimo 1 caracter especial</string>
     <string name="toast_field_min_8char">La contraseña debe tener mínimo 8 carácteres.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
