--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="toast_field_min_8char">La contraseña debe tener mínimo 8 carácteres.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="productors_near">Productores cerca de mi</string>
 
 
 </resources>
