--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="nombreUsuario">Nombre Usuario</string>
     <string name="listo">Listo</string>
     <string name="cancel">Cancelar</string>
+    <string name="volver" >Volver</string>
 
     <!-- hints -->
     <string name="insert_email_hint">Correo electrónico</string>
@@ -53,6 +54,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="productors_near">Productores cerca de mi</string>
+    <string name="add_tocart">Añadir al Carrito</string>
 
 
 </resources>
