+Implementacion del map i el selector de distancia i previa implementacion filtrado por distancia de los productores. +modificacion de User i AuthService.signUpUser para que acepte latitud i longitud

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="confirmar_pedido">Enviar Pedido</string>
     <string name="iva_incluido">IVA incluido</string>
     <string name="total">TOTAL:</string>
+    <string name="tv_distancia">Rango de busqueda:</string>
 
 
 </resources>
