v1, comunicacion entre fragments usando Bundle

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="iva_incluido">IVA incluido</string>
     <string name="total">TOTAL:</string>
     <string name="tv_distancia">Rango de busqueda:</string>
+    <string name="actualizar_busqueda">Actualizar</string>
 
 
 </resources>
