+ Implementados recursos de ui si el recicler view esta vacio para que ui/ux sea mas amigable.

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="total">TOTAL:</string>
     <string name="tv_distancia">Rango de busqueda:</string>
     <string name="actualizar_busqueda">Actualizar</string>
+    <string name="search_button_productors">Buscar Productos</string>
 
 
 </resources>
