+ Obtencion de los pedidos v0.7

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="search_button_productors">Buscar Productos</string>
     <string name="mis_pedidos">Mis pedidos:</string>
     <string name="pedido_realizado_por">Pedido realizado por:</string>
+    <string name="productos_pedido">Productos del pedido:</string>
 
 
 </resources>
